--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>康文昌的在线HTML 教学小工具</title>
+    <title>网易云音乐储存</title>
     <style>  
       body {
         margin: 0;
@@ -12,24 +12,65 @@
   </head>
   <body>
     <div style="
+      text-align: center;
+      background-color: rgb(233, 69, 86);
+      padding: 100px;
+    ">
+      <h1>欢迎来到ZDXL的网易云音乐储存地</h1>
+      <img src='https://s21.ax1x.com/2024/09/16/pAuo5IP.png' alt="网易云" width="180" height="150">
+    </div>
+    <div style="
       background-color: #f1f1f1;
       text-align: center;
       padding: 40px;
     ">
-      <img src='https://s21.ax1x.com/2024/09/16/pAu4HxJ.jpg' alt="ZDXL" width="80px" height="100px">
+      <img src='https://s21.ax1x.com/2024/09/16/pAu4HxJ.jpg' alt="ZDXL" width="400px" height="450px">
+      <img src='https://s21.ax1x.com/2024/09/16/pAuo2KH.jpg' alt="Sakura" width="400" height="450">
     </div>
     <div style="
       max-width: 700px;
       margin: 30px auto;
       padding: 15px;
       line-hight: 1.7;
-      color: blue;
+      color: rgb(0, 0, 0);
     ">
-      <p>我的网站<p/>
-      <p>我的网站<p/>
-      <p>我的网站<p/>
-      <p>我的网站<p/>
-      <p>我的网站<p/>
+      <a href="https://music.163.com/#/my/m/music/playlist?id=10118739493"><h1>日语<h1/></a>      
+    </div>
+    <div style="
+      max-width: 700px;
+      margin: 30px auto;
+      padding: 15px;
+      line-hight: 1.7;
+      color: rgb(0, 0, 0);
+    ">
+      <a href="https://music.163.com/#/my/m/music/playlist?id=12399527285"><h1>纯音乐<h1/></a>      
+    </div>
+    <div style="
+      max-width: 700px;
+      margin: 30px auto;
+      padding: 15px;
+      line-hight: 1.7;
+      color: rgb(0, 0, 0);
+    ">
+      <a href=""><h1>Eng<h1/></a>   
+    </div>
+    <div style="
+      max-width: 700px;
+      margin: 30px auto;
+      padding: 15px;
+      line-hight: 1.7;
+      color: rgb(0, 0, 0);
+    ">
+      <a href="https://music.163.com/#/my/m/music/playlist?id=3179853726"><h1>其他<h1/></a>     
+    </div>
+    <div style="
+      max-width: 700px;
+      margin: 30px auto;
+      padding: 15px;
+      line-hight: 1.7;
+      color: rgb(0, 0, 0);
+    ">
+      <a href=""><h1>未知<h1/></a>      
     </div>
     <div style="
       background-color: #f1f1f1;
@@ -39,7 +80,7 @@
       color:red;
     ">
       <p>我的网站<p/>
-      <a href="https://www.midorg.com/">click here to siwtch to the certain website page<a/>
+      <a href="https://www.midorg.com/">click here to siwtch to the original creater's website page<a/>
     </div>
   </body>
 </html>
